--- a/Tweets_Sentiment_Analysis.ipynb
+++ b/Tweets_Sentiment_Analysis.ipynb
@@ -170,10 +170,10 @@
     "\n",
     "def print_status():\n",
     "    \n",
-    "    consumer_key = 'LikHDXdKm5uI5fnNVJqRcurmi'\n",
-    "    consumer_secret = 'kSvyN9dMKYMMbVd9IPsyPhWUEqdmzzVR0po6DUhwrmLARDB6y4'\n",
-    "    access_token = '236803367-0J9UCR2IOas4zlp6pDziQdmXq5yvkROpldq70a0O'\n",
-    "    access_token_secret = 'tOVubG5jpLvtw8WGEW4usjdeTSHXCmZboVCbx32VgmRrG'\n",
+    "    consumer_key = ''\n",
+    "    consumer_secret = ''\n",
+    "    access_token = ''\n",
+    "    access_token_secret = ''\n",
     "\n",
     "\n",
     "    auth = OAuthHandler(consumer_key, consumer_secret) \n",
